--- a/autostat.html
+++ b/autostat.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html class="mcss">
 <head>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" href="midas.css">
-   <script src="controls.js"></script>
-   <script src="jquery.min.js"></script>
-   <script src="midas.js"></script>
-   <script src="mhttpd.js"></script>
-   <title>AutoStat</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="midas.css">
+    <script src="controls.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="midas.js"></script>
+    <script src="mhttpd.js"></script>
+    <title>AutoStat</title>
+    <script>
+        var gStatusInflight = false;
+        function statusPeriodicUpdate(){
+        
+            // don't make another request if the last request is still outstanding.
+            if(gStatusInflight) return;
+            gStatusInflight = true;
+
+            mjsonrpc_send_request([
+                    mjsonrpc_make_request("cm_exist",{"name":"fe_autostat"}),
+                ]).then(function (rpc) {
+
+                    // Check the status of the autostat frontend
+                    var prog_exist = rpc[0].result.status;
+                    if(prog_exist == 1){
+                        document.getElementById('updateStatus').innerHTML = "fe_autostat program is running";
+                        document.getElementById('updateStatus').style.color = "green";
+                    }else{
+                        document.getElementById('updateStatus').innerHTML = "fe_autostat program NOT running";
+                        document.getElementById('updateStatus').style.color = "red";
+                    }
+
+                    gStatusInflight = false; // finished async routine
+                }).catch(function(error) {
+                    if (error.request) {
+                        var s = mjsonrpc_decode_error(error);
+                        console.log("mjsonrpc_error_alert: " + s);
+                    } else {
+                        console.log("mjsonroc_error_alert: " + error);
+                    }
+                });
+        }
+    </script>
 </head>
 
-<body class="mcss" onload="mhttpd_init('AutoStat')">
+<body class="mcss" onload="mhttpd_init('AutoStat');setInterval(statusPeriodicUpdate,3000);statusPeriodicUpdate()">
 
     <!-- header and side navigation will be filled in mhttpd_start -->
     <div id="mheader"></div>
@@ -23,19 +56,22 @@
                         <th colspan="5" class="mtableheader">Enable AutoStat Programs</th>
                     </tr>
                     <tr>
+                        <td colspan="5" style="text-align: center"> <div id="updateStatus"></td>
+                    </tr>
+                    <tr>
                         <td style="width: 150px;">
                             <b>Program</b>
                         </td>
-                        <td style="width: 100px;">
+                        <td style="width: 150px;">
                             <b>Controlling</b>
                         </td>
-                        <td style="width: 100px;">
+                        <td style="width: 200px;">
                             <b>Target</b>
                         </td>
-                        <td style="width: 150px;">
+                        <td style="width: 200px;">
                             <b>Target Setpoint</b>
                         </td>
-                        <td style="width: 100px;">
+                        <td style="width: 80px;">
                             <b>Enabled</b>
                         </td>
                     </tr>
@@ -46,10 +82,10 @@
                             <a href="/Equipment/PID_4KPressure/Settings">PID_4KPressure (autopurify)</a>
                         </td>
                         <td>
-                            HTR204
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_4KPressure/Settings/control_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
-                            PT206
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_4KPressure/Settings/target_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
                             <div name="modbvalue" data-odb-path="/Equipment/PID_4KPressure/Settings/target_setpoint" data-odb-editable="1" ></div>
@@ -65,10 +101,10 @@
                             <a href="/Equipment/PID_20KShield/Settings">PID_20KShield</a>
                         </td>
                         <td>
-                            FPV205
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_20KShield/Settings/control_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
-                            TS505
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_20KShield/Settings/target_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
                             <div name="modbvalue" data-odb-path="/Equipment/PID_20KShield/Settings/target_setpoint" data-odb-editable="1" ></div>
@@ -84,10 +120,10 @@
                             <a href="/Equipment/PID_100KShield/Settings">PID_100KShield</a>
                         </td>
                         <td>
-                            FPV207
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_100KShield/Settings/control_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
-                            TS508
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_100KShield/Settings/target_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
                             <div name="modbvalue" data-odb-path="/Equipment/PID_100KShield/Settings/target_setpoint" data-odb-editable="1" ></div>
@@ -103,10 +139,10 @@
                             <a href="/Equipment/PID_TransLineTemp/Settings">PID_TransLineTemp</a>
                         </td>
                         <td>
-                            FPV212
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_TransLineTemp/Settings/control_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
-                            TS245
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_TransLineTemp/Settings/target_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
                             <div name="modbvalue" data-odb-path="/Equipment/PID_TransLineTemp/Settings/target_setpoint" data-odb-editable="1" ></div>
@@ -122,10 +158,10 @@
                             <a href="/Equipment/PID_Wall2Temp/Settings">PID_Wall2Temp</a>
                         </td>
                         <td>
-                            FPV209
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_Wall2Temp/Settings/control_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
-                            TS351
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_Wall2Temp/Settings/target_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
                             <div name="modbvalue" data-odb-path="/Equipment/PID_Wall2Temp/Settings/target_setpoint" data-odb-editable="1" ></div>
@@ -141,10 +177,10 @@
                             <a href="/Equipment/PID_ECollar/Settings">PID_ECollar</a>
                         </td>
                         <td>
-                            FPV206
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_ECollar/Settings/control_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
-                            TS525
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_ECollar/Settings/target_pv" data-odb-editable="0" ></div>
                         </td>
                         <td>
                             <div name="modbvalue" data-odb-path="/Equipment/PID_ECollar/Settings/target_setpoint" data-odb-editable="1" ></div>
@@ -153,6 +189,88 @@
                             <input class="AutoEnable" type="checkbox" name="modbcheckbox" data-odb-path="/Equipment/PID_ECollar/Settings/Enabled"></input>
                         </td>
                     </tr>
+                    
+                    <!-- Purifier Heaters -->
+                    <tr>
+                        <td colspan="5" style="text-align: center; background-color:#97c7ef; color:#ffffff"> <b>Purifier Heaters</b></td>
+                    </tr>
+
+                    <!-- Purifier 70K He3 HTR-->                    
+                    <tr>
+                        <td>
+                            <a href="/Equipment/PID_PUR_HE70K/Settings">PID_PUR_HE70K</a>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_HE70K/Settings/control_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_HE70K/Settings/target_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_HE70K/Settings/target_setpoint" data-odb-editable="1" ></div>
+                        </td>
+                        <td>
+                            <input class="AutoEnable" type="checkbox" name="modbcheckbox" data-odb-path="/Equipment/PID_PUR_HE70K/Settings/Enabled"></input>
+                        </td>
+                    </tr>
+
+                    <!-- Purifier 70K Iso HTR-->                    
+                    <tr>
+                        <td>
+                            <a href="/Equipment/PID_PUR_ISO70K/Settings">PID_PUR_ISO70K</a>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_ISO70K/Settings/control_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_ISO70K/Settings/target_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_ISO70K/Settings/target_setpoint" data-odb-editable="1" ></div>
+                        </td>
+                        <td>
+                            <input class="AutoEnable" type="checkbox" name="modbcheckbox" data-odb-path="/Equipment/PID_PUR_ISO70K/Settings/Enabled"></input>
+                        </td>
+                    </tr>
+
+                    <!-- Purifier 20K He3 HTR-->                    
+                    <tr>
+                        <td>
+                            <a href="/Equipment/PID_PUR_HE20K/Settings">PID_PUR_HE20K</a>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_HE20K/Settings/control_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_HE20K/Settings/target_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_HE20K/Settings/target_setpoint" data-odb-editable="1" ></div>
+                        </td>
+                        <td>
+                            <input class="AutoEnable" type="checkbox" name="modbcheckbox" data-odb-path="/Equipment/PID_PUR_HE20K/Settings/Enabled"></input>
+                        </td>
+                    </tr>
+
+                    <!-- Purifier 20K Iso HTR-->                    
+                    <tr>
+                        <td>
+                            <a href="/Equipment/PID_PUR_ISO20K/Settings">PID_PUR_ISO20K</a>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_ISO20K/Settings/control_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_ISO20K/Settings/target_pv" data-odb-editable="0" ></div>
+                        </td>
+                        <td>
+                            <div name="modbvalue" data-odb-path="/Equipment/PID_PUR_ISO20K/Settings/target_setpoint" data-odb-editable="1" ></div>
+                        </td>
+                        <td>
+                            <input class="AutoEnable" type="checkbox" name="modbcheckbox" data-odb-path="/Equipment/PID_PUR_ISO20K/Settings/Enabled"></input>
+                        </td>
+                    </tr>
+
                 </table>
         </section>
         </div>
