Added instructions for adding/removing PID loops

--- a/autostat.html
+++ b/autostat.html
@@ -52,6 +52,8 @@
     <div id="full_div" style="display:block">
         <section>
                 <table class="mtable">
+                
+                    <!-- TABLE HEADER -->
                     <tr>
                         <th colspan="5" class="mtableheader">Enable AutoStat Programs</th>
                     </tr>
@@ -190,7 +192,9 @@
                         </td>
                     </tr>
                     
+                    <!-- ====================================================================================== -->
                     <!-- Purifier Heaters -->
+                    <!-- ====================================================================================== -->
                     <tr>
                         <td colspan="5" style="text-align: center; background-color:#97c7ef; color:#ffffff"> <b>Purifier Heaters</b></td>
                     </tr>
