Fixed table heaer

--- a/autostat.html
+++ b/autostat.html
@@ -196,7 +196,7 @@
                     <!-- Purifier Heaters -->
                     <!-- ====================================================================================== -->
                     <tr>
-                        <td colspan="5" style="text-align: center; background-color:#97c7ef; color:#ffffff"> <b>Purifier Heaters</b></td>
+                        <td colspan="5" class="mtableheader"> Purifier Heaters</td>
                     </tr>
                     <tr>
                         <td style="width: 200px;">
