Fixed typo in control limits

--- a/autostat.html
+++ b/autostat.html
@@ -67,14 +67,19 @@
     <div id="mmain">
     <div id="full_div" style="display:block">
         <section>
+                <!-- <h1><p style="text-align: center;">Enable AutoStat Programs</p></h1> -->
                 <table class="mtable">
 
                     <!-- TABLE HEADER -->
-                    <tr>
-                        <th colspan="5" class="mtableheader">Enable AutoStat Programs</th>
+                    <tr style="height: 50px">
+                        <th colspan="5" class="mtableheader"><h1>Enable AutoStat Control Loops</h1></th>
                     </tr>
                     <tr>
                         <td colspan="5" style="text-align: center"> <b><div id="updateStatus"></b></td>
+                    </tr>
+
+                    <tr>
+                        <th colspan="5" class="mtableheader">FPVs</th>
                     </tr>
                     <tr>
                         <td style="width: 200px;">
