Added read-only status to control and target pv vaules

--- a/autostat.html
+++ b/autostat.html
@@ -429,7 +429,7 @@
                     <!-- HTR008-->
                     <tr>
                         <td>
-                            <a href="/Equipment/PID_HTR008/Settings">PID_HTR008</a>
+                            <a href="/Equipment/PID_HTR008/Settings">PID_HTR008 (not working, perhaps because TS223 is not working?)</a>
                         </td>
                         <td>
                             <div name="modbvalue" data-odb-path="/Equipment/PID_HTR008/Settings/control_pv" data-odb-editable="0" ></div>
