Changed setup and mhttpd initi order to speed up page load

--- a/autostat.html
+++ b/autostat.html
@@ -129,7 +129,7 @@
     </script>
 </head>
 
-<body class="mcss" onload="mhttpd_init('AutoStat');setup();setInterval(statusPeriodicUpdate,3000);statusPeriodicUpdate()">
+<body class="mcss" onload="setup();mhttpd_init('AutoStat');setInterval(statusPeriodicUpdate,3000);statusPeriodicUpdate()">
 
     <!-- header and side navigation will be filled in mhttpd_start -->
     <div id="mheader"></div>
