Fixed issue where callbacks were exceeding MAX_OPEN_RECORDS

--- a/autostat.html
+++ b/autostat.html
@@ -29,7 +29,7 @@
                               "PID_HTR008"]);
 
             // notes and title changes
-            document.getElementById("PID_HTR008_title").innerHTML = "PID_HTR008 (not working, perhaps because TS223 is not working?)";
+            // document.getElementById("PID_HTR008_title").innerHTML = "PID_HTR008 (not working, unsure why)";
         }
 
         var gStatusInflight = false;
