Reduced number of callback functions

--- a/autostat.html
+++ b/autostat.html
@@ -29,6 +29,7 @@
                               "PID_HTR008"]);
 
             // notes and title changes
+            // please leave the following line as an example of how to do this
             // document.getElementById("PID_HTR008_title").innerHTML = "PID_HTR008 (not working, unsure why)";
         }
 
